k8s/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: short-link
  namespace: short-link

spec:
  replicas: 3
  selector:
    matchLabels:
      app: short-link
  template:
    metadata:
      labels:
        app: short-link
    spec:
      containers:
        - name: short-link
          image: short-link:local
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          startupProbe:
            httpGet:
              path: /health
              port: http
            failureThreshold: 30
            periodSeconds: 2
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
