k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: short-link
  namespace: short-link
  labels:
    app: short-link
spec:
  type: ClusterIP
  selector:
    app: short-link
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
