k8s/api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: short-link
  namespace: short-link
spec:
  parentRefs:
    - name: short-link-gateway
      sectionName: http

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: short-link
          port: 8080
